[package]
name = "bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = {version = "*", features=["full"]}

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
